Refactor Client and Editor APIs for improved consistency and clarity
- Updated Client class to use IClientModCoreAPI instead of ClientModCoreAPI.
- Simplified asset retrieval methods in Client by removing namespace parameter.
- Refactored AvatarWidget to align with new asset retrieval methods.
- Changed BuilderPanel and PublisherPanel to use IEditorModCoreAPI.
- Updated Editor class to use IEditorModCoreAPI for consistency.
- Renamed assembly definitions for clarity and consistency.
- Adjusted Main class to utilize IMainModCoreAPI and improved logging.
- Modified AssetRuntimeAvatar to use ResourceIdentifier for path management.
- Updated SearchHandler to reflect new asset retrieval method.
- Changed IAvatarAPI interface to accept ResourceIdentifier for LoadFromAssets.
- Added constraints in nox.mod.jsonc to ensure proper loading order of dependencies.

--- a/Runtime/Editor/Nox.Avatars.Runtime.Editor.asmdef
+++ b/Runtime/Editor/Nox.Avatars.Runtime.Editor.asmdef
@@ -16,7 +16,7 @@
         "Nox.Avatars.Editor",
         "Nox.Controllers",
         "Nox.Avatars.Builder",
-        "Nox.Runtime.Avatars",
+        "Nox.Avatars.Runtime",
         "Nox.Avatars.Pipeline",
         "Nox.Avatars.Parameters",
         "UniTask"
