--- a/Nox.Mods.Avatars.asmdef
+++ b/Nox.Mods.Avatars.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Nox.Avatars.Runtime",
+    "name": "Nox.Mods.Avatars",
     "rootNamespace": "",
     "references": [
         "Nox.CCK",
