feat: Enhance asset upload and status tracking
- Updated the UI to improve the building and publishing feedback in publisher.uxml.
- Implemented file hash calculation for asset uploads in PublisherActions.cs to ensure data integrity.
- Modified the upload process to return detailed responses including upload status and queue position.
- Added new AssetStatusResponse and UploadAssetResponse classes to handle asset status and upload responses.
- Introduced IAssetStatusResponse and IUploadAssetResponse interfaces for better abstraction.
- Enhanced network request handling in Network.cs to support cancellation tokens for improved responsiveness.
- Updated IAvatarAPI interface to reflect changes in asset upload and status retrieval methods.

--- a/Runtime/Nox.Avatars.Runtime.asmdef
+++ b/Runtime/Nox.Avatars.Runtime.asmdef
@@ -21,7 +21,8 @@
     "Nox.Avatars.Parameters",
     "Nox.Editor.Panel",
     "Nox.Avatars.Editor",
-    "Nox.Controllers"
+    "Nox.Controllers",
+    "Nox.CCK.Network"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
